--- a/dialog.html
+++ b/dialog.html
@@ -6,8 +6,17 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="dialog.css">
 </head>
-<body>
+<body class="body">
 	<div class="container">
+		<div class="">
+			<input type="search" name="q" class="search"">
+		</div>
+		<textarea name="" cols="30" rows="10" class="textarea"></textarea>
+		<div class="wrapper">
+			<button class="btn">Фото</button>
+			<button class="btn">Видео</button>
+			<button class="btn">Отправить</button>
+		</div>
 	</div>
 </body>
 </html>
