--- a/.html/menu.html
+++ b/.html/menu.html
@@ -7,19 +7,26 @@
 	<link rel="stylesheet" href="../.css/menu.css">
 </head>
 <body>
-	<div class="hamburger-menu">
+	<div class="burger-menu">
 		<input id="menu__toggle" type="checkbox" />
 		<label class="menu__btn" for="menu__toggle">
-		  <span></span>
+			<span></span>
 		</label>
 		<ul class="menu__box">
-		  <li><a class="menu__item" href="#">Войти</a></li>
-		  <li><a class="menu__item" href="#">Главная</a></li>
-		  <li><a class="menu__item" href="#">Профиль</a></li>
-		  <li><a class="menu__item" href="#">Диалог</a></li>
+			<li><a class="menu__item" href="#">Войти</a></li>
+			<li><a class="menu__item" href="#">Главная</a></li>
+			<li><a class="menu__item" href="#">Профиль</a></li>
+			<li><a class="menu__item" href="#">Диалог</a></li>
 		</ul>
-	  </div>
-	  <div id="app"></div>
+		</div>
+		<div id="app"></div>
 	</div>
+	<header class="header">
+		<div class="header-inner"></div>
+	</header>
+	<footer class="footer">
+		<div class="footer-inner"></div>
+	</footer>
+	
 </body>
 </html>
