--- a/.html/login.html
+++ b/.html/login.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Login</title>
+	<title>Авторизация</title>
 	<link rel="stylesheet" href="../.css/login.css">
 </head>
-<body class="body">
+<body id="body">
+	<a href="index.htmll">Меню</a>
+
 	<div class="container">
+
+		<h1>Авторизация</h1>
+		
+		<input type="text" placeholder="Введите логин или email" class="button-inner" >
+		<input type="text" placeholder="Пароль" class="button-inner" >
+
 		<div>
-			Авторизация
+			<button class="button-outer">Войти</button>
+			<button class="button-outer">Забыли пароль</button>
 		</div>
-		<div>
-			<input type="text" placeholder="Введите логин или email" class="field" >
-		</div>	
-		<div>
-			<input type="text"  placeholder="Пароль" class="field" >
-		</div>
-		<div>
-			<button class="but">Войти</button>
-			<button class="but">Забыли пароль</button>
-		</div>
-	</div>
+	</>
 </body>
 </html>
