--- a/.html/menu.html
+++ b/.html/menu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Меню</title>
 	<link rel="stylesheet" href="../.css/menu.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
 			<span></span>
 		</label>
 		<ul class="menu__box">
-			<li><a class="menu__item" href="#">Войти</a></li>
-			<li><a class="menu__item" href="#">Главная</a></li>
-			<li><a class="menu__item" href="#">Профиль</a></li>
-			<li><a class="menu__item" href="#">Диалог</a></li>
+			<li><a class="menu__item" href="login.html">Войти</a></li>
+			<li><a class="menu__item" href="index.html">Главная</a></li>
+			<li><a class="menu__item" href="profile.html">Профиль</a></li>
+			<li><a class="menu__item" href="dialog.html">Диалог</a></li>
 		</ul>
 		</div>
 		<div id="app"></div>
