--- a/.html/index.html
+++ b/.html/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Главная</title>
+	<link rel="stylesheet" href="../.css/menu.css">
 	<link rel="stylesheet" href="../.css/index.css">
 </head>
 <body class="body">
-	<header class="header"></header>
-	<a href="menu.html"></a>
-	<footer class="footer"></footer>
+	<div class="burger-menu">
+		<input id="menu__toggle" type="checkbox" />
+		<label class="menu__btn" for="menu__toggle">
+			<span></span>
+		</label>
+		<ul class="menu__box">
+			<li><a class="menu__item" href="login.html">Войти</a></li>
+			<li><a class="menu__item" href="index.html">Главная</a></li>
+			<li><a class="menu__item" href="profile.html">Профиль</a></li>
+			<li><a class="menu__item" href="dialog.html">Диалог</a></li>
+		</ul>
+		</div>
+		<div id="app"></div>
+	</div>
+	<header class="header">
+		<div class="header-inner"></div>
+	</header>
+	
+	<footer class="footer">
+		<div class="footer-inner"></div>
+	</footer>
 </body>
 </html>
